--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,14 @@
+# @Author: Haibin Lee <haibin>
+# @Date:   2021-01-25T13:07:53+08:00
+# @Email:  haibin.li@newtouch.com
+# @Filename: test.yml
+# @Last modified by:   haibin
+# @Last modified time: 2021-01-25T13:17:45+08:00
+# @Copyright: Copyright 2020 the original author or authors.
+
+
+
 ---
 - hosts: localhost
-  remote_user: root
   roles:
-    - ansible-webase-role
+    - "../../ansible-webase-role"
