--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,12 @@
+# @Author: Haibin Lee <haibin>
+# @Date:   2021-01-25T13:07:53+08:00
+# @Email:  haibin.li@newtouch.com
+# @Filename: main.yml
+# @Last modified by:   haibin
+# @Last modified time: 2021-01-29T18:03:18+08:00
+# @Copyright: Copyright 2020 the original author or authors.
+
+
+
 ---
 # vars file for ansible-webase-role
