--- a/tasks/docker_image.yml
+++ b/tasks/docker_image.yml
@@ -3,12 +3,12 @@
 # @Email:  haibin.li@newtouch.com
 # @Filename: docker_image.yml
 # @Last modified by:   haibin
-# @Last modified time: 2021-02-01T19:55:15+08:00
+# @Last modified time: 2021-02-18T14:29:39+08:00
 # @Copyright: Copyright 2020 the original author or authors.
 
 - name: "{{ project | upper }} | 更新 {{ webase_build_dir }}/{{ project }}/dist/Dockerfile"
   template:
-    src: gradle-Dockerfile.j2
+    src: gradle_Dockerfile.j2
     dest: "{{ webase_build_dir }}/{{ project }}/dist/Dockerfile"
 
 - name: "{{ project | upper }} | 更新 {{ webase_build_dir }}/{{ project }}/dist/.dockerignore"
@@ -18,10 +18,13 @@
 
 - name: "{{ project | upper }} | 构建 {{ project }} 镜像"
   docker_image:
-    name: "{{ webase_docker_image_prefix | default(omit) }}{{ project }}"
+    name: "{{ webase_docker_private_repo | default(omit) }}{{ project }}"
+    tag: "{{ release_version }}"
     build:
       path: "{{ webase_build_dir }}/{{ project }}/dist/"
       nocache: true
       pull: false
     source: build
     force_source: true
+    push: "{{ webase_push_docker_image }}"
+    archive_path: "{{ (webase_push_docker_image) | ternary(omit, webase_build_dir + '/' + project + '_docker_image_' + release_version + '.tar') }}"
